[project]
name = "hytek"
version = "0.0.1"
description = "A simple tool for parsing and manipulating HyTek files."
readme = { content-type = "text/md", file = "README.md" }
requires-python = ">=3.12"
license = { text = "BSD 3-Clause" }
authors = [
    { name = "plun1331" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]


[project.urls]
Homepage = "https://pycord.dev"
Changelog = "https://docs.pycord.dev/en/master/changelog.html"
Source = "https://github.com/Pycord-Development/pycord"
Documentation = "https://docs.pycord.dev"
Tracker = "https://github.com/Pycord-Development/pycord/issues"
Funding = "https://patreon.com/pycord"